--- a/paginas/sumate.html
+++ b/paginas/sumate.html
@@ -28,7 +28,7 @@
     <div class="contenedorPrincipal">
 
       <div class="encabezado">
-        <a href="index.html">
+        <a href="../index.html">
           <img class="logo" src="../multimedia/LOGO2-01-01.png" alt="logo">
         </a>
         <div class="titulos">
