ultima actualizacion-entega final

--- a/paginas/Somos.html
+++ b/paginas/Somos.html
@@ -91,12 +91,7 @@
                 </li>
               </ul>
 
-              <!-- Sebastian, este frame de Bootstrap venia con un buscador. Lo anulé para mi página.-->
-
-              <!-- <form class="d-flex mt-3" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-success" type="submit">Buscar</button>
-                      </form> -->
+              
             </div>
           </div>
         </div>
@@ -109,13 +104,9 @@
 
         <section class="somos">
             <p class="titulopag">Quienes somos</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet non ipsa sapiente maiores distinctio
-                consequatur voluptate, aut quibusdam praesentium a nisi quia, atque id. Excepturi porro dolorum commodi
-                accusamus similique!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet non ipsa sapiente
-                maiores distinctio consequatur voluptate, aut quibusdam praesentium a nisi quia, atque id. </p>
-            <p>Excepturi porro dolorum commodi accusamus similique! Lorem, ipsum dolor sit amet consectetur adipisicing
-                elit. Eveniet non ipsa sapiente maiores distinctio consequatur voluptate, aut quibusdam praesentium a
-                nisi quia, atque id. Excepturi porro dolorum commodi accusamus similique!</p>
+            <p>Los Addams son una familia con intereses macabros y habilidades sobrenaturales. En ningún momento de la serie se da explicación de sus poderes.
+
+              El muy rico y entusiasta Gomez Addams (Homero Addams en Hispanoamérica) (John Astin) está enamorado perdidamente de su refinada esposa Morticia (Carolyn Jones). Junto con su hija Wednesday (Miércoles en España y Merlina en Hispanoamérica) (Lisa Loring), su hijo Pugsley (Pericles en Hispanoamérica) (Ken Weatherwax), el Tío Fester (Tío Fétido en España y Tío Lucas en Hispanoamérica) (Jackie Coogan) y la Abuela (Blossom Rock), residen en la calle del cementerio n.º 0001, en una ornamentada y frondosa mansión con dos sirvientes: Lurch (Largo en Hispanoamérica) (Ted Cassidy), un mayordomo y Thing (acreditado como Cosa/Dedos, pero el personaje fue interpretado por Cassidy y Jack Voglin), una mano sin cuerpo que sale de una caja de madera. Algunos familiares que aparecen en algunos episodios incluyen a Cousin Itt (Primo Eso en España y Tío Cosa en Hispanoamérica) (Felix Silla), la hermana mayor de Morticia, Ofelia (interpretada por Carolyn Jones) o la madre de Morticia, la Abuela Frump (Margaret Hamilton).</p>
 
             <img src="../multimedia/home.jpg" alt="somos1" class="somosImg">
             
