--- a/paginas/litoral.html
+++ b/paginas/litoral.html
@@ -102,8 +102,16 @@
 <section class="wikiInfo" >
 <p>La Región del Litoral comprende la zona del territorio argentino formada por las provincias de Misiones, Corrientes y Entre Ríos (que a su vez forman la Mesopotamia argentina) y la zona de las provincias de Formosa, Chaco y Santa Fe que están cerca de los ríos Paraná y Paraguay.1​ Esta región histórica y cultural está comprendida por las costas y zonas cercanas al Río Paraná, Río Paraguay, Río Uruguay y las islas del Delta del Paraná ubicadas en Entre Ríos y el extremo norte de la Provincia de Buenos Aires. Su gentilicio es litoraleño. Fitogeográficamente corresponde a las selvas de la provincia fitogeográfica Paranaense que se transforman en sabanas y bosques xerófilos hacia la región central y sur. La palabra Litoral sugiere a un territorio con costas en un mar o en el océano, sin embargo en el caso del actual Litoral Argentino ninguna de las provincias litoraleñas tiene directa salida al mar o al océano. La denominación geográfica adviene desde tiempos del dominio español, épocas en las cuales (como sucedía durante el Virreinato del Río de la Plata) el extremo oriental de la Argentina tenía directa salida al mar por El Tapé, la Banda Oriental e incluso por la Guayrá.</p>
 <img src="../multimedia/150px-Litoral_argentino.svg.png" alt="mapa del litoral">
-</section>  
+</section> 
 </main>
+<div class="menuRegion">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item"><a class="page-link" href="../paginas/norte.html">Norte</a></li>
+      <li class="page-item"><a class="page-link" href="../paginas/patagonia.html">Patagonia</a></li>
+    </ul>
+  </nav>
+</div>
 
   <footer>
 
