--- a/paginas/norte.html
+++ b/paginas/norte.html
@@ -112,6 +112,14 @@
 <img src="../multimedia/250px-Mapa_Plan_Belgrano.png" alt="mapa del gran norte">
   </section>  
   </main>
+  <div class="menuRegion">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item"><a class="page-link" href="../paginas/litoral.html">Litoral</a></li>
+        <li class="page-item"><a class="page-link" href="../paginas/patagonia.html">Patagonia</a></li>
+      </ul>
+    </nav>
+  </div>
 
   <footer>
 
