--- a/paginas/patagonia.html
+++ b/paginas/patagonia.html
@@ -105,7 +105,16 @@
   
 </section>  
   </main>
-
+  <div>
+    <div>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item"><a class="page-link" href="../paginas/norte.html">Norte</a></li>
+        <li class="page-item"><a class="page-link" href="../paginas/litoral.html">Litoral</a></li>
+      </ul>
+    </nav>
+  </div>
+  </div>
   <footer>
 
     <div>
