--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <h2>Proyecto Attraversiamo</h2>
           <h3> El viaje de nuestras vidas</h3>
         </div>
-
       </div>
+
 
 
       <nav class="navbar navbar-dark bg-dark fixed-top">
@@ -57,7 +57,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="paginas/somos.html">Quienes somos</a>
+                  <a class="nav-link" href="./paginas/somos.html">Quienes somos</a>
                 </li>
 
                 <li class="nav-item dropdown">
