buscando que funcionen los links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="./paginas/somos.html">Quienes somos</a>
+                  <a class="nav-link" href="paginas/somos.html">Quienes somos</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -115,7 +115,7 @@
         <div class="textocentrado"> <mark> Conocé el Litoral</mark></div>
       </a>
     </div>
-
+    
   </main>
 
   <footer>
