actualizacion carpeta paginas

--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
 
       <img src="multimedia/redes/youtube-logo-hd-8.png" alt="youtube">
       <a href="https://www.youtube.com/">Youtube</a>
+
+    <a class="nav-link" href="paginas/somos.html">Quienes somos</a>
     </div>
   </footer>
 
