--- a/paginas/sumate.html
+++ b/paginas/sumate.html
@@ -105,27 +105,27 @@
 
       <section class="compras">
       <img src="../multimedia/dulces.jpg" alt="">
-      <p>Aunque la proporción de fruta y azúcar varía en función del tipo de mermelada, del punto de maduración de la fruta y otros factores, el punto de partida habitual es que sea en proporción 1:1 en peso. </p>
+      <p>Aunque la proporción de fruta y azúcar varía en función del tipo de mermelada, del punto de maduración de la fruta, el punto de partida. </p>
       <a href="../paginas/contacto.html">
       <button>Quiero más información</button> </a>
 
       </section>
       <section class="compras">
         <img src="../multimedia/vasijas.jpg" alt="">
-        <p>Vasija, como sinónimo de vaso o recipiente, es toda pieza cóncava, de diferentes tamaños y formas, y fabricada en distintos materiales,nota 1​ usada para albergar o manipular líquidos, alimentos y otros contenidos indeterminados.</p>
+        <p>Vasija, como sinónimo de vaso o recipiente, es toda pieza cóncava, de diferentes tamaños y formas, y fabricada en distintos materiales.       </p>
         
         <a href="../paginas/contacto.html">
           <button>Quiero más información</button> </a>
       </section>
       <section class="compras">
         <img src="../multimedia/telares.jpg" alt="">
-        <p>El telar es una máquina para tejer, construida con madera o metal, en la que se colocan unos hilos paralelos, denominados urdimbres, que deben sujetarse por ambos extremos. Mediante un mecanismo, estos hilos son elevados individualmente o en grupos</p>
+        <p>El telar es una máquina para tejer, construida con madera o metal, en la que se colocan unos hilos paralelos, denominados urdimbres. </p>
         <a href="../paginas/contacto.html">
           <button>Quiero más información</button> </a>
       </section>
       <section class="compras">
         <img src="../multimedia/especias.jpg" alt="">
-        <p>Técnicamente, se considera una especia a las partes duras, como las semillas o cortezas, de ciertas plantas aromáticas, pero, por similitud, muchas veces también se engloba a las fragantes hojas de algunas plantas herbáceas, cuyo nombre culinario es hierbas.</p>
+        <p>Técnicamente, se considera una especia a las partes duras, como las semillas o cortezas, de ciertas plantas aromáticas.</p>
         <a href="../paginas/contacto.html">
           <button>Quiero más información</button> </a>
       </section>
