--- a/paginas/patagonia.html
+++ b/paginas/patagonia.html
@@ -105,7 +105,7 @@
   
 </section>  
   </main>
-  <div>
+  <div class="menuRegion">
     <div>
     <nav aria-label="Page navigation example">
       <ul class="pagination">
